<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal"
    android:weightSum="7"
   >

    <TextView
        android:id="@+id/col_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_weight="2"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:text="@string/history_date"
        android:textColor="@color/txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/col_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/history_weight"
        android:textColor="@color/txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/col_bmi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:fontFamily="@font/roboto"
        android:text="@string/history_bmi"
        android:textColor="@color/txt"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/col_cat"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        android:layout_weight="3"
        android:fontFamily="@font/roboto"
        android:text="@string/history_categories"
        android:textColor="@color/txt"
        android:textSize="16sp" />

</LinearLayout>