<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="vertical"
    tools:context=".HistoryActivity">

    <TextView
        android:id="@+id/title_history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:paddingTop="10dp"
        android:text="@string/history_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/txt"
        android:textSize="34sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="15dp"
        android:weightSum="7">

        <TextView
            android:id="@+id/col_date2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="2"
            android:gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/history_date"
            android:textColor="@color/txt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/col_weight2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/history_weight"
            android:textColor="@color/txt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/col_bmi2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/history_bmi"
            android:textColor="@color/txt"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/col_cat2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:layout_weight="3"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/history_categories"
            android:textColor="@color/txt"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>