<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:gravity="center|top"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/title"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textColor="@color/txt"
                android:textSize="34sp" />

            <LinearLayout
                android:id="@+id/bmi_weight_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/title_weight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/weight"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/txt"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/weight_editText"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:hint="@string/hint_text"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/box_txt"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bmi_height_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/title_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/height"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/txt"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/height_editText"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/border"
                    android:ems="10"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:hint="@string/hint_text"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="@color/box_txt"
                    android:textColorHint="#757575"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/bmi_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/title_bmi_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/bmi"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/txt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/box_bmi_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/bmi_val"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/box_txt"
                    android:textSize="18sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/bmi_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp"
                android:paddingBottom="25dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/title_bmi_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/categories"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/txt"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/box_bmi_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="35dp"
                    android:layout_weight="1"
                    android:background="@drawable/text_border"
                    android:fontFamily="@font/roboto"
                    android:gravity="center"
                    android:minHeight="48dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:text="@string/cat_val"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="@color/box_txt"
                    android:textSize="16sp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/calculate_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="200dp"
                android:height="50dp"
                android:backgroundTint="@color/g_green"
                android:fontFamily="@font/roboto_bold"
                android:hapticFeedbackEnabled="true"
                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingRight="16dp"
                android:paddingBottom="4dp"
                android:text="@string/calculate"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>